# Chemistry_SimilarObsidian

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_EN.md
apps/electron/native/: CMakeLists.txt
apps/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
kernel/benchmarks/: CMakeLists.txt
kernel/benchmarks/query/: query_benchmark.cpp  query_benchmark_domain.cpp
kernel/benchmarks/rebuild/: rebuild_benchmark_chemistry.h
kernel/src/: CMakeLists.txt
src/: CMakeLists.txt
src/impl/chemistry/: chemistry_spectrum_metadata.cpp  chemistry_spectrum_selector.cpp
src/impl/core/: kernel_attachment_api_fill.cpp  kernel_attachment_api_reset.cpp  kernel_attachment_api_shared.cpp  kernel_attachment_legacy_api.cpp  kernel_attachment_path_shape.cpp  kernel_attachment_public_api.cpp  kernel_attachment_query_shared.cpp  kernel_chemistry_api_fill.cpp  kernel_chemistry_api_reset.cpp  kernel_chemistry_public_api.cpp  kernel_chemistry_query_shared.cpp  kernel_chemistry_reference_api_reset.cpp  kernel_diagnostics.cpp  kernel_diagnostics_chemistry_json.cpp  kernel_diagnostics_chemistry_storage.cpp  kernel_diagnostics_domain_json.cpp  kernel_diagnostics_json.cpp  kernel_diagnostics_storage.cpp  kernel_domain_api_fill.cpp  kernel_domain_object_api_fill.cpp  kernel_domain_object_api_reset.cpp  kernel_domain_object_public_api.cpp  kernel_domain_object_query_shared.cpp  kernel_domain_query_shared.cpp  kernel_domain_reference_api_fill.cpp  kernel_domain_reference_api_reset.cpp  kernel_domain_reference_public_api.cpp  kernel_domain_reference_query_shared.cpp  kernel_note_io.cpp  kernel_pdf_query_shared.cpp  kernel_pdf_reference_api_fill.cpp  kernel_pdf_reference_api_reset.cpp  kernel_pdf_reference_query_shared.cpp  kernel_pdf_reference_resolution.cpp  kernel_rebuild.cpp  kernel_runtime.cpp  kernel_shared.cpp  kernel_watcher_runtime.cpp
src/impl/diagnostics/: logger.cpp
src/impl/index/: refresh_paths.cpp
src/impl/parser/: parser.cpp
src/impl/pdf/: pdf_metadata.cpp
src/impl/recovery/: journal_format.cpp  journal_scan.cpp  journal_startup_recovery.cpp
src/impl/search/: search.cpp  search_detail.cpp  search_note_queries.cpp
src/impl/storage/: storage_attachment_queries.cpp  storage_attachment_state.cpp  storage_chem_diagnostics_queries.cpp  storage_chem_reference_queries.cpp  storage_connection.cpp  storage_note_delete_rename.cpp  storage_note_upsert.cpp  storage_pdf_anchor_queries.cpp  storage_pdf_diagnostics_queries.cpp  storage_pdf_queries.cpp  storage_schema.cpp  storage_sqlite_helpers.cpp
src/impl/vault/: state_paths.cpp
src/impl/watcher/: session.cpp  watcher.cpp  windows_decode.cpp
src/internal/chemistry/: chemistry_spectrum_metadata.h  chemistry_spectrum_selector.h
src/internal/core/: kernel_attachment_api_shared.h  kernel_attachment_path_shape.h  kernel_chemistry_api_shared.h  kernel_chemistry_query_shared.h  kernel_chemistry_reference_api_shared.h  kernel_chemistry_reference_query_shared.h  kernel_diagnostics_support.h  kernel_domain_api_shared.h  kernel_domain_object_api_shared.h  kernel_domain_object_key.h  kernel_domain_object_query_shared.h  kernel_domain_query_shared.h  kernel_domain_reference_api_shared.h  kernel_internal.h  kernel_pdf_query_shared.h  kernel_pdf_reference_query_shared.h  kernel_pdf_reference_resolution.h  kernel_shared.h
src/internal/index/: refresh_internal.h
src/internal/parser/: parser.h
src/internal/pdf/: pdf_metadata.h
src/internal/platform/: platform.h
src/internal/recovery/: journal.h  journal_internal.h
src/internal/storage/: storage.h  storage_internal.h  storage_note_lifecycle_internal.h
src/internal/vault/: revision.h
src/internal/watcher/: integration.h  session.h  watcher.h
tests/: CMakeLists.txt
tests/api/: kernel_api_test_support.cpp  kernel_api_test_support.h  kernel_api_tests.cpp
tests/include/api/: kernel_api_attachment_diagnostics_helpers.h  kernel_api_attachment_diagnostics_suites.h  kernel_api_attachment_lifecycle_watcher_suites.h  kernel_api_attachment_public_surface_suites.h  kernel_api_chemistry_diagnostics_suites.h  kernel_api_chemistry_suites.h  kernel_api_core_contract_suites.h  kernel_api_domain_object_suites.h  kernel_api_domain_reference_suites.h  kernel_api_pdf_diagnostics_suites.h  kernel_api_pdf_surface_suites.h  kernel_api_pdf_test_helpers.h  kernel_api_rebuild_runtime_suites.h  kernel_api_runtime_recovery_disk_truth_suites.h  kernel_api_runtime_recovery_interruptions.h  kernel_api_runtime_recovery_startup_suites.h  kernel_api_search_expanded_suites.h  kernel_api_search_legacy_suites.h  kernel_api_test_suites.h  kernel_api_watcher_smoke_suites.h
tests/include/search/: search_note_core_suites.h  search_test_suites.h
tests/include/watcher/: watcher_test_support.h
tests/parser/: parser_tests.cpp
tests/src/api/: kernel_api_tests.cpp  kernel_api_tests_attachment_diagnostics.cpp  kernel_api_tests_attachment_diagnostics_snapshot.cpp  kernel_api_tests_attachment_legacy_contract.cpp  kernel_api_tests_attachment_lifecycle.cpp  kernel_api_tests_attachment_lifecycle_recovery.cpp  kernel_api_tests_attachment_lifecycle_recovery_startup.cpp  kernel_api_tests_attachment_lifecycle_surface.cpp  kernel_api_tests_attachment_lifecycle_watcher.cpp  kernel_api_tests_attachment_lifecycle_watcher_rescan.cpp  kernel_api_tests_attachment_public_surface.cpp  kernel_api_tests_attachment_public_surface_refs.cpp  kernel_api_tests_chemistry.cpp  kernel_api_tests_chemistry_diagnostics.cpp  kernel_api_tests_chemistry_diagnostics_recount.cpp  kernel_api_tests_chemistry_diagnostics_snapshot.cpp  kernel_api_tests_chemistry_references.cpp  kernel_api_tests_chemistry_subtype.cpp  kernel_api_tests_core_contract.cpp  kernel_api_tests_core_contract_parser.cpp  kernel_api_tests_core_contract_state.cpp  kernel_api_tests_core_contract_write.cpp  kernel_api_tests_domain_diagnostics_recount.cpp  kernel_api_tests_domain_diagnostics_snapshot.cpp  kernel_api_tests_domain_objects.cpp  kernel_api_tests_domain_objects_attachment.cpp  (+41 more)
tests/support/: test_support.cpp
tests/watcher/: watcher_tests.cpp
(+607 files in other folders)
