# Reason: This file defines the minimal kernel library target and the focused implementation units it owns.

add_library(
  chem_kernel
  STATIC
  ../third_party/sqlite/sqlite3.c
  impl/core/runtime/kernel_shared.cpp
  impl/core/runtime/kernel_runtime.cpp
  impl/core/runtime/kernel_watcher_runtime.cpp
  impl/core/runtime/kernel_rebuild.cpp
  impl/core/notes/kernel_note_io.cpp
  impl/core/notes/kernel_note_catalog_api.cpp
  impl/core/notes/kernel_file_tree_api.cpp
  impl/core/notes/kernel_vault_change_api.cpp
  impl/core/notes/kernel_vault_entry_api.cpp
  impl/core/search/kernel_query_api.cpp
  impl/core/attachments/kernel_attachment_api_shared.cpp
  impl/core/attachments/kernel_attachment_api_reset.cpp
  impl/core/attachments/kernel_attachment_api_fill.cpp
  impl/core/attachments/kernel_attachment_path_shape.cpp
  impl/core/attachments/kernel_attachment_query_shared.cpp
  impl/core/attachments/kernel_attachment_public_api.cpp
  impl/core/attachments/kernel_attachment_legacy_api.cpp
  impl/core/chemistry/kernel_chemistry_api_reset.cpp
  impl/core/chemistry/kernel_chemistry_api_fill.cpp
  impl/core/chemistry/kernel_chemistry_query_shared.cpp
  impl/core/chemistry/kernel_chemistry_public_api.cpp
  impl/core/chemistry/kernel_chemistry_kinetics_public_api.cpp
  impl/core/chemistry/kernel_chemistry_stoichiometry_public_api.cpp
  impl/core/chemistry/kernel_chemistry_retrosynthesis_public_api.cpp
  impl/core/chemistry/kernel_chemistry_spectroscopy_public_api.cpp
  impl/core/chemistry/kernel_chemistry_molecular_preview_public_api.cpp
  impl/core/product/ai/kernel_product_ai_embedding.cpp
  impl/core/product/ai/kernel_product_ai_embedding_blob_public_api.cpp
  impl/core/product/ai/kernel_product_ai_embedding_public_api.cpp
  impl/core/product/ai/kernel_product_ai_ponder.cpp
  impl/core/product/ai/kernel_product_ai_ponder_public_api.cpp
  impl/core/product/ai/kernel_product_ai_rag.cpp
  impl/core/product/ai/kernel_product_ai_rag_public_api.cpp
  impl/core/product/ai/kernel_product_ai_settings.cpp
  impl/core/product/ai/kernel_product_ai_settings_public_api.cpp
  impl/core/product/ai/kernel_product_ai_text.cpp
  impl/core/product/context/kernel_product_context.cpp
  impl/core/product/context/kernel_product_context_public_api.cpp
  impl/core/product/database/kernel_product_database.cpp
  impl/core/product/database/kernel_product_database_public_api.cpp
  impl/core/product/paper/kernel_product_paper.cpp
  impl/core/product/paper/kernel_product_paper_public_api.cpp
  impl/core/product/pubchem/kernel_product_pubchem.cpp
  impl/core/product/pubchem/kernel_product_pubchem_public_api.cpp
  impl/core/product/shared/kernel_product_json.cpp
  impl/core/product/study/kernel_product_study.cpp
  impl/core/product/study/kernel_product_study_calendar.cpp
  impl/core/product/study/kernel_product_study_heatmap.cpp
  impl/core/product/study/kernel_product_study_public_api.cpp
  impl/core/product/truth/kernel_product_truth.cpp
  impl/core/product/truth/kernel_product_truth_public_api.cpp
  impl/core/ai/kernel_ai_embedding_cache_shared.cpp
  impl/core/ai/kernel_ai_embedding_changed_refresh_jobs_api.cpp
  impl/core/ai/kernel_ai_embedding_metadata_api.cpp
  impl/core/ai/kernel_ai_embedding_mutation_api.cpp
  impl/core/ai/kernel_ai_embedding_query_api.cpp
  impl/core/ai/kernel_ai_embedding_refresh_jobs_api.cpp
  impl/core/ai/kernel_ai_embedding_refresh_jobs_shared.cpp
  impl/core/study/kernel_study_session_api.cpp
  impl/core/crystal/kernel_crystal_public_api.cpp
  impl/core/symmetry/kernel_symmetry_public_api.cpp
  impl/core/symmetry/kernel_symmetry_atom_parser_public_api.cpp
  impl/core/symmetry/kernel_symmetry_calculation_public_api.cpp
  impl/core/symmetry/kernel_symmetry_shape_public_api.cpp
  impl/core/symmetry/kernel_symmetry_principal_axes_public_api.cpp
  impl/core/symmetry/kernel_symmetry_candidate_public_api.cpp
  impl/core/symmetry/kernel_symmetry_operation_public_api.cpp
  impl/core/symmetry/kernel_symmetry_render_public_api.cpp
  impl/core/chemistry/kernel_chemistry_reference_resolution.cpp
  impl/core/chemistry/kernel_chemistry_reference_api_reset.cpp
  impl/core/chemistry/kernel_chemistry_reference_api_fill.cpp
  impl/core/chemistry/kernel_chemistry_reference_query_shared.cpp
  impl/core/chemistry/kernel_chemistry_reference_public_api.cpp
  impl/core/pdf/kernel_pdf_query_shared.cpp
  impl/core/pdf/kernel_pdf_api.cpp
  impl/core/pdf/kernel_pdf_annotation_public_api.cpp
  impl/core/pdf/kernel_pdf_ink_public_api.cpp
  impl/core/domain/kernel_domain_api_reset.cpp
  impl/core/domain/kernel_domain_api_fill.cpp
  impl/core/domain/kernel_domain_query_shared.cpp
  impl/core/domain/kernel_domain_public_api.cpp
  impl/core/domain/kernel_domain_object_key.cpp
  impl/core/domain/kernel_domain_object_api_reset.cpp
  impl/core/domain/kernel_domain_object_api_fill.cpp
  impl/core/domain/kernel_domain_object_query_shared.cpp
  impl/core/domain/kernel_domain_object_public_api.cpp
  impl/core/domain/kernel_domain_reference_api_reset.cpp
  impl/core/domain/kernel_domain_reference_api_fill.cpp
  impl/core/domain/kernel_domain_reference_query_shared.cpp
  impl/core/domain/kernel_domain_reference_public_api.cpp
  impl/core/pdf/kernel_pdf_reference_resolution.cpp
  impl/core/pdf/kernel_pdf_reference_query_shared.cpp
  impl/core/pdf/kernel_pdf_reference_api_reset.cpp
  impl/core/pdf/kernel_pdf_reference_api_fill.cpp
  impl/core/pdf/kernel_pdf_reference_public_api.cpp
  impl/core/diagnostics/kernel_diagnostics.cpp
  impl/core/diagnostics/kernel_diagnostics_storage.cpp
  impl/core/diagnostics/kernel_diagnostics_chemistry_storage.cpp
  impl/core/diagnostics/kernel_diagnostics_json.cpp
  impl/core/diagnostics/kernel_diagnostics_chemistry_json.cpp
  impl/core/diagnostics/kernel_diagnostics_domain_json.cpp
  impl/diagnostics/logger.cpp
  impl/index/refresh_paths.cpp
  impl/index/refresh_rescan.cpp
  impl/parser/parser.cpp
  impl/chemistry/chemistry_spectrum_metadata.cpp
  impl/chemistry/chemistry_spectrum_selector.cpp
  impl/chemistry/molecular_preview.cpp
  impl/chemistry/polymerization_kinetics.cpp
  impl/chemistry/retrosynthesis.cpp
  impl/chemistry/spectroscopy_parser.cpp
  impl/chemistry/stoichiometry.cpp
  impl/crystal/cif_parser.cpp
  impl/crystal/miller_plane.cpp
  impl/crystal/supercell.cpp
  impl/symmetry/atom_parser.cpp
  impl/symmetry/calculation.cpp
  impl/symmetry/classify.cpp
  impl/symmetry/shape_analysis.cpp
  impl/symmetry/principal_axes.cpp
  impl/symmetry/candidate_generation.cpp
  impl/symmetry/operation_search.cpp
  impl/symmetry/render_geometry.cpp
  impl/pdf/pdf_anchor.cpp
  impl/pdf/ink_smoothing.cpp
  impl/pdf/pdf_metadata.cpp
  impl/recovery/journal_format.cpp
  impl/recovery/journal_scan.cpp
  impl/recovery/journal_startup_recovery.cpp
  impl/search/search.cpp
  impl/search/search_detail.cpp
  impl/search/search_note_queries.cpp
  impl/search/search_attachment_queries.cpp
  impl/storage/storage_sqlite_helpers.cpp
  impl/storage/storage_connection.cpp
  impl/storage/storage_schema.cpp
  impl/storage/storage_ai_embedding_cache.cpp
  impl/storage/storage_study_sessions.cpp
  impl/storage/storage_note_upsert.cpp
  impl/storage/storage_note_delete_rename.cpp
  impl/storage/storage_attachment_state.cpp
  impl/storage/storage_attachment_queries.cpp
  impl/storage/storage_pdf_anchor_state.cpp
  impl/storage/storage_pdf_anchor_queries.cpp
  impl/storage/storage_pdf_state.cpp
  impl/storage/storage_pdf_queries.cpp
  impl/storage/storage_pdf_reference_queries.cpp
  impl/storage/storage_chem_reference_queries.cpp
  impl/storage/storage_chem_diagnostics_queries.cpp
  impl/storage/storage_pdf_diagnostics_queries.cpp
  impl/storage/storage_attachment_diagnostics_queries.cpp
  impl/storage/storage_note_queries.cpp
  impl/watcher/integration.cpp
  impl/watcher/session.cpp
  impl/watcher/watcher.cpp
  impl/watcher/windows_decode.cpp
  impl/platform/windows/platform_windows.cpp
  impl/vault/revision.cpp
  impl/vault/state_paths.cpp
)

target_include_directories(
  chem_kernel
  PUBLIC
    ${PROJECT_SOURCE_DIR}/include
  PRIVATE
    ${PROJECT_SOURCE_DIR}
    ${PROJECT_SOURCE_DIR}/src/internal
    ${PROJECT_SOURCE_DIR}/third_party/sqlite
)

target_compile_features(chem_kernel PUBLIC cxx_std_20)

if(WIN32)
  target_compile_definitions(chem_kernel PRIVATE KERNEL_PLATFORM_WINDOWS=1)
endif()

target_compile_definitions(chem_kernel PRIVATE SQLITE_ENABLE_FTS5=1)
